# lab6

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  LICENSE.rtf  README.md
.github/workflows/: ci.yml  release.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
tests/: CMakeLists.txt  test_solver.cpp
